# gudf

./: Cargo.toml  README copy.md  README.md
crates/gudf/: Cargo.toml
crates/gudf-cli/: Cargo.toml
crates/gudf-cli/src/: main.rs
crates/gudf-dir/: Cargo.toml
crates/gudf-dir/src/: lib.rs
crates/gudf/examples/: basic.rs  formats.rs  merge.rs  mutation_chain.rs  patch.rs  pipeline.rs  semantic.rs
crates/gudf/src/: annotations.rs  builder.rs  engine.rs  error.rs  format.rs  lib.rs  merge.rs  mutation.rs  patch.rs  path.rs  pipeline.rs  result.rs  semantic.rs
crates/gudf/src/formats/: code.rs  cross.rs  json.rs  mod.rs  text.rs  toml.rs  yaml.rs
crates/gudf/src/output/: inline.rs  json.rs  json_patch.rs  mod.rs  unified.rs
tests/fixtures/: new.json  new.toml  new.yaml  old.json  old.toml  old.yaml
